<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dip"
    tools:context=".Asteroides">

    <TextView
        style="@style/TextoAsteroides"
        android:text="@string/asteroides" />
    
    <Button 
        android:id="@+id/btn_jugar"
        style="@style/TextoAsteroides.Botones"
        android:onClick="lanzarJuego"
        android:text="@string/jugar"/>
    
    <Button
        android:id="@+id/btn_configurar"
 		style="@style/TextoAsteroides.Botones"
        android:text="@string/configurar"/>

    <Button
        android:id="@+id/btn_acercaDe"
        style="@style/TextoAsteroides.Botones"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acerca_de" />

    <Button
        android:id="@+id/btn_puntuaciones"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/puntuaciones"/>
    
    <Button
        android:id="@+id/btn_salir"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/salir"/>
</LinearLayout>